Begin working on `imp init` command